fix: header image and spacing

--- a/frontend-mentorship-challenge-04/scss/style.scss
+++ b/frontend-mentorship-challenge-04/scss/style.scss
@@ -53,8 +53,9 @@ h4 {
 
 // section: Header
 header {
-	height: 160vh;
-	background: url("../images/p1.jpg") center 35% / cover no-repeat;
+	height: 140vh;
+	background: url("../images/p1.jpg") 50% 10rem / cover no-repeat,
+		url("../images/p1.jpg") 50% 0 / cover no-repeat;
 	nav {
 		padding: 4rem 5rem;
 		font-size: 1.75rem;
@@ -75,7 +76,7 @@ header {
 		}
 	}
 	h1 {
-		margin-bottom: 9rem;
+		margin-bottom: 12rem;
 		margin-top: 6rem;
 		font-size: 11rem;
 		font-weight: 900;
@@ -90,6 +91,7 @@ header {
 		p {
 			margin: 1.5rem 0;
 			font-size: 1.75rem;
+			line-height: 2.8rem;
 			color: $darkPurpleClr;
 		}
 		div {
@@ -97,9 +99,8 @@ header {
 			position: relative;
 			input {
 				width: 100%;
-				height: 3rem;
 				margin: 2rem 0;
-				padding: 2.5rem 2rem;
+				padding: 2rem 2rem;
 				background-color: $whiteClr;
 				box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.03);
 				&::placeholder {
@@ -127,7 +128,7 @@ header {
 			}
 		}
 		button {
-			margin-top: 8rem;
+			margin-top: 6rem;
 		}
 	}
 }
